<resources>
    <string name="app_name">Androidify</string>
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="activity_c">Activity C</string>
    <string name="standard">Standard</string>
    <string name="singleTop">Single Top</string>
    <string name="singleTask">Single Task</string>
    <string name="singleInstance">Single Instance</string>

    <!--Android Room with a View - Kotlin - CodeLabs-->
    <string name="add_word">Add Word</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="codelabs_projects">CodeLabs Projects</string>
    <string name="topics">Topics</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="launchmodes">Launch Modes</string>
    <string name="room">Room</string>
    <string name="data_binding">DataBinding</string>
    <string name="activity_codeLabs">CodeLabs</string>
    <string name="activity_topics">Topics</string>

    <!--Data Binding in Android - CodeLabs-->
    <string name="likes">Likes</string>
    <string name="textview">TextView</string>
    <string name="profile_name">NAME</string>
    <string name="profile_lastname">LAST NAME</string>
    <string name="last_name_label">Last name</string>
    <string name="name_label">Name</string>
    <string name="profile_avatar_cd">Profile\'s avatar</string>
    <string name="like">Like</string>
    <string name="click_to_start">Click to start</string>
    <string name="basic_coroutines">Basic Coroutines</string>
    <string name="marginGoneDemo">Margin Gone Demo</string>
    <string name="first">First</string>
    <string name="dummy_text">Dummy</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="button_one">Button 1</string>
    <string name="button_two">Button 2</string>
    <string name="advanced_coroutines">Advanced Coroutines</string>
    <string name="a11y_plant_item_image">Picture of plant</string>
    <string name="menu_filter_by_grow_zone">Filter by grow zone</string>
    <string name="navDrawer">Nav Drawer</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="lifecycle_activity_a">LifeCycleActivity A</string>

</resources>
